Fixed Step 3 overflow

--- a/serverless_client/src/App.css
+++ b/serverless_client/src/App.css
@@ -173,7 +173,7 @@ nav #nav .title {
 }
 
 .result-data {
-  width: 100%;
+  width: 99%;
   padding: .2rem;
   border: solid black 1px;
   font-size: 1.5rem;
